[System.Serializable]
public class AnomalyRate
{
    public int noAnomaly;

    public int huge;

    public int normal;

    public int tiny;
}